--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@docimax/ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
+  "description": "docimax ui plugin",
+  "author": "bei <liub@docimax.com.cn>",
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lib": "vue-cli-service build --target lib --name dui --dest lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -15,6 +19,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
+    "eslint": "^6.5.1",
+    "eslint-plugin-vue": "^5.2.3",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
