--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@docimax/ui",
-  "version": "0.0.1",
+  "version": "0.0.10",
   "description": "docimax ui plugin",
   "author": "bei <liub@docimax.com.cn>",
   "private": false,
+  "main": "lib/dui.umd.min.js",
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lib": "vue-cli-service build --target lib --name dui --dest lib packages/index.js"
+    "lib": "vue-cli-service build --target lib --name dui --dest lib src/components/index.js",
+    "p": "npm publish --access public"
   },
   "dependencies": {
     "core-js": "^2.6.5",
