--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docimax/ui",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "docimax ui plugin",
   "author": "bei <liub@docimax.com.cn>",
   "private": false,
@@ -8,8 +8,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lib": "vue-cli-service build --target lib --name dui --dest lib src/components/index.js",
+    "b": "vue-cli-service build --target lib --name dui --dest lib src/components/index.js",
     "p": "npm publish --access public"
   },
   "dependencies": {
